Fixes and Enhancements since Version 0.5 alpha 3

 - Added "paramstyle" support for SQL connections, which now have a
   'newParams()' method to create a parameter object, and an
   'addParam(params,value,name=None)' method to add parameters to the 'params'
   object (created via 'newParams()') and return the string that should be used
   to reference the parameter.

   This lets you write SQL generation code with embedded parameters using "bind
   variables".  For example, you could do something like this, if 'db' is a SQL
   connection object::

        params = db.newParams()
        sql = 'SELECT * FROM foobar WHERE baz='+db.addParam(params, 42)
        rows = db(sql, params)

 - The 'peak' script is now an .exe on Windows, using setuptools' "entry point"
   system.

 - PEAK no longer bundles any software that can be obtained automatically from
   PyPI.  Running PEAK's setup script will attempt to download and install
   the needed packages.  (Note that development snapshots of PEAK may require
   development snapshots of related packages.)

 - Added a series of new QueryDM and EntityDM convenience features.  See
   "Making Data Managers easier to use":http://www.eby-sarna.com/pipermail/peak/2005-May/002296.html
   for a complete list and explanatory documentation.

 - Changed 'running.lookupCommand()' to use the command's 'getCommandParent()'
   method, so that commands using the '--config' option will utilize the
   specified configuration(s) to lookup subcommands.

 - Added a '-c/--config' option to PEAK bootstrap commands to load an .ini
   configuration file in a new service area before executing any subcommands.

   This allows you to do things like::

        peak launch -c bulletins ref:sitemap@sitemap.xml

   which loads the 'bulletins' configuration file before launching the sitemap.
   Note that if you are subclassing 'commands.Bootstrap' you can suppress this
   option using 'options.reject_inheritance("-c","--config")' in the body of