@@ -227,7 +227,7 @@ By default, options defined in a base class are inherited by subclasses::
     ...     verbose = False
 
     >>> print options.get_help(Foo())
-    options:
+    Options:
       -v, --verbose  Be verbose
       -q, --quiet    Be quiet
 
@@ -239,7 +239,7 @@ By default, options defined in a base class are inherited by subclasses::
     ...         print "Zap!", optval
 
     >>> print options.get_help(Bar())   # doctest: +NORMALIZE_WHITESPACE
-    options:
+    Options:
       -v, --verbose  Be verbose
       -q, --quiet    Be quiet
       -d INT         Add debug flag
@@ -255,7 +255,7 @@ their option name(s) to ``options.reject_inheritance()``::
     ...     options.reject_inheritance('--quiet','-v')
 
     >>> print options.get_help(Baz())
-    options:
+    Options:
       --verbose  Be verbose
       -q         Be quiet
 
@@ -383,7 +383,7 @@ provided for you.)  Here's one way to implement such an option::
     ...         print parser.format_help().strip()
     >>> test = Test()
     >>> args = options.parse(test, ['--help'])
-    options:
+    Options:
       -v, --verbose  Be verbose
       -q, --quiet    Be quiet
       -z INT         Zapify!
@@ -406,11 +406,11 @@ generated help messages.  For example::
     ...     usage="%prog [options]", description="Just a test program.",
     ...     prog="Test",
     ... )
-    usage: Test [options]
+    Usage: Test [options]
     ...
     Just a test program.
     ...
-    options:
+    Options:
       -v, --verbose  Be verbose
       -q, --quiet    Be quiet
       -z INT         Zapify!
@@ -420,7 +420,7 @@ generated help messages.  For example::
 blank lines in the real output.  Doctest doesn't allow blank lines to appear
 in sample output.)
 
-Also, one keyword argument is allow that is not actually an ``OptionParser``
+Also, one keyword argument is allowed that is not actually an ``OptionParser``
 keyword argument: ``allow_interspersed_args``.  If this keyword is not set
 to a true value, option parsing stops at the first non-option argument
 encountered.  (This is the desired default behavior for PEAK commands, to
@@ -493,7 +493,7 @@ Once this is done, the option can be placed in a class with other options::
     >>> class Groupy(Foo):
     ...     binding.metadata(money=opt_r, bang=opt_explode)
     >>> print options.get_help(Groupy())
-    options:
+    Options:
       -v, --verbose         Be verbose
       -q, --quiet           Be quiet
     ...
@@ -516,7 +516,7 @@ ungrouped options, then the output looks more like this::
     >>> class GroupsOnly:
     ...     binding.metadata(money=opt_r, bang=opt_explode)
     >>> print options.get_help(GroupsOnly())
-    options:
+    Options:
       Silly Options:
         Forward aerial half turn every alternate step
     ...
@@ -548,7 +548,7 @@ And let's see what its help output now looks like::
     Either this is an abstract command class, or somebody forgot to
     define a usage message for their subclass.
     ...
-    options:
+    Options:
       -v, --verbose  Be verbose
       -q, --quiet    Be quiet
       --help         Show help
@@ -714,27 +714,25 @@ check for the option names the option already has::
 
 
 
-``options.OptionRegistry``
+``options.OptionsRegistry``
 ==========================
 
-The ``options.OptionRegistry`` is a dispatcher that manages option metadata
-for any class that has command-line options.  When an option is declared
-as metadata for an attribute, it is added to the registry.  Here, we check
-that the 'method' passed to the registry's ``__setitem__`` is correct::
+The ``options.OptionRegistry`` is an ``addons.Registry`` that manages option
+metadata for any class that has command-line options.  When an option is
+declared as metadata for an attribute, it is added to the registry for the
+corresponding class.  Initially, each ``OptionsRegistry`` only contains any
+inherited options::
 
-    >>> from peak.util.unittrace import History
     >>> class Foo: pass
+    >>> options.OptionsRegistry(Foo)
+    {}
+
+``OptionsRegistry`` is a dictionary subclass whose keys are option names (both
+short and long) and whose values are ``(attrname, option_object)`` tuples::
+
     >>> option_x = options.AbstractOption('-x',value=True)
-    >>> h = History()
-    >>> h.trace(binding.declareAttribute, Foo, 'bar', option_x)
-    >>> h.calledOnce(options.OptionRegistry.__setitem__).args.method
-    (('-x', ('bar', <...AbstractOption...>)),)
-
-The registered value for an option is a tuple of ``(optname,(attr,option))``
-tuple structures, one for each option name in the option object.  This is then
-turned into more useful information by the option registry's method combiner::
-
-    >>> options.OptionRegistry[Foo(),]
+    >>> binding.declareAttribute(Foo, 'bar', option_x)
+    >>> options.OptionsRegistry(Foo)
     {'-x': ('bar', <...AbstractOption...>)}
 
 Although, it's probably easier to see the usefulness with a more elaborate
@@ -745,11 +743,11 @@ example::
     ...         bar = options.AbstractOption('-x','--exact',value=True),
     ...         baz = options.AbstractOption('-y','--yodeling',value=False),
     ...     )
-    >>> options.OptionRegistry[Foo(),]  # doctest: +NORMALIZE_WHITESPACE
-    {'--exact': ('bar', <...AbstractOption...>),
-    '-y': ('baz', <...AbstractOption instance...>),
-    '-x': ('bar', <...AbstractOption instance...>),
-    '--yodeling': ('baz', <...AbstractOption instance...>)}
+    >>> options.OptionsRegistry(Foo)  # doctest: +NORMALIZE_WHITESPACE
+    {'-y': ('baz', <...AbstractOption instance...>),
+     '--exact': ('bar', <...AbstractOption...>),
+     '-x': ('bar', <...AbstractOption instance...>),
+     '--yodeling': ('baz', <...AbstractOption instance...>)}
 
 
 -----
